# Jaglavak

./: .---JAGLAVAK---  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
Docker/: Dockerfile
Docker/BuildWindows/: Dockerfile
Model/: cascade.gen  cascade.train  dense-deep.gen  dense-wide.gen  tunnel-deep.gen  tunnel-pure.gen  tunnel-wide-pure.gen  tunnel-wide.gen  zero-layer.gen
Project/: EmbedFileAsString.bat  Jaglavak.sln  Jaglavak.vcxproj  Jaglavak.vcxproj.filters  Random.txt
Projects/: Build-README.txt  Corvid.sln  Corvid.sublime-workspace  Corvid.vcxproj  Corvid.vcxproj.filters  CorvidCUDA.vcxproj  CorvidCuda.vcxproj
Projects/CorvidCuda/: CorvidCuda.vcxproj
Projects/SIMD-AVX2/: SIMD-AVX2.vcxproj  SIMD-AVX2.vcxproj.filters
Projects/SIMD-AVX512/: SIMD-AVX512.vcxproj  SIMD-AVX512.vcxproj.filters
Projects/SIMD-SSE2/: SIMD-SSE2.vcxproj  SIMD-SSE2.vcxproj.filters
Projects/SIMD-SSE4/: SIMD-SSE4.vcxproj  SIMD-SSE4.vcxproj.filters
Script/: ChessEncodings.py  CombineDem.py  EpdToJson.py  GenerateModel.py  GenerateTestData.py  InferenceServer.py  PgnToJson.py  TrainPriorCalc.py
Source/: AsyncWorker.h  BitBoard.h  CPU-AVX2.cpp  CPU-AVX2.h  CPU-AVX512.cpp  CPU-AVX512.h  CPU-SSE2.cpp  CPU-SSE2.h  CPU-SSE4.cpp  CPU-SSE4.h  CPU-X64.h  CUDA.cu  CUDA.h  Chess.h  Common.h  Core.h  Corvid.cpp  CpuWorker.h  CudaWorker.h  DefaultSettings.json  Defs.h  Encoding.h  Engine.h  Evaluation.h  FEN.h  GPU-CUDA.cu  GPU-CUDA.h  GamePlayer.h  GlobalOptions.cpp  GlobalOptions.h  GpuWorker.h  Jaglavak.cpp  Jaglavak.h  Jobs.h  LocalWorker.h  MoveList.h  MoveMap.h  OpenCL.cpp  Operations.h  Options.h  (+37 more)
Source/CUDA/: CudaPlayer.cu  CudaSupport.h  CudaWorker.cpp  CudaWorker.h
Source/Chess/: BitBoard.h  ClPrefix.inc  ClSuffix.inc  Core.h  Defs.h  Glom.bat  MoveList.h  MoveMap.h  Operations.h  Position.h  ScoreCard.h
Source/Game/: Chess.h  ConnectN.h  IGameState.h
Source/Misc/: Allocator.h  CpuInfo.h  Perft.h  PidController.h  Queue.h  Random.h  Serialization.h  ThreadSync.h  Threads.h  Timer.h  Tokenizer.h
Source/Player/: AVX2.cpp  AVX2.h  AVX512.cpp  AVX512.h  CpuPlayer.h  CpuSwitch.h  CudaDevice.h  CudaKernel.cu  CudaPlayer.cu  CudaPlayer.h  CudaSupport.h  GamePlayer.h  PlayoutBatch.h  PlayoutJob.h  PlayoutParams.h  SSE4.cpp  SSE4.h  SimdSwitch.h  X64.cpp
Source/SIMD/: AVX2.cpp  AVX2.h  AVX512.cpp  AVX512.h  SSE4.h  SimdPlayer.h  SimdWorker.h
Source/Settings/: DefaultSettings.json  GlobalSettings.cpp  GlobalSettings.h
Source/TreeSearch/: AsyncWorker.h  BranchSelection.cpp  Expansion.cpp  GamePlayer.h  IGameState.h  PlayoutBatch.h  PlayoutParams.h  PriorProbability.cpp  ScoreCard.h  SearchThread.cpp  SearchTree.cpp  SearchTree.h  TimeControl.cpp  Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h  TreeSearch.cpp  TreeSearch.h  UciStatus.cpp
Source/UnitTest/: Perft.h  RunUnitTests.cpp  TestOperations.cpp  TestPerft.cpp  TestSIMD.cpp
Source/Util/: Allocator.h  CpuInfo.h  FEN.h  FiberSet.cpp  FiberSet.h  GameRecord.h  HugeBuffer.h  HugePages.h  Logging.h  Perft.h  PidController.h  Queue.h  Random.h  SmallBlocks.h  StringHash.h  StringUtil.cpp  StringUtil.h  ThreadSync.h  Timer.h  Tokenizer.h
Source/Worker/: AsyncWorker.h  CpuWorker.cpp  CpuWorker.h  CudaDevice.h  CudaSupport.h  CudaWorker.cpp  CudaWorker.h  Encoding.h  InferenceWorker.h  LocalWorker.h  RemoteWorker.h  RpcClient.cpp  RpcClient.h  SimdWorker.h  TensorFlow.h
Testing/: ChangeId.bat  ChessEncodings.py  EpdToJson.py  GenerateModel.py  GenerateTestData.py  GraphChart.dot  ImportTestSuite.py  InferenceServer.py  Level1.bat  Log.txt  NetworkArchitecture.drawio  Notes.md  Perft.py  PgnToJson.py  RunSuite.py  STS_Rating.txt  TrainPriorCalc.py  TrainingEnv.yml  TreeVisualization.dot
Testing/Book/: TCEC 11_Noomen Select.pgn  TCEC 13_Noomen Select.pgn  TCEC 14_Noomen Select.pgn  TCEC 9_Noomen Select.pgn
Testing/Books/: TCEC 12_Noomen Select.pgn
Testing/Engine/: Level1.bat  engines.json  gauntlet.bat  gauntlet.pgn  quicktest.bat
Testing/Engines/: engines.json
Testing/JaglavakTestData/: LICENSE
Testing/Perft/: Perft.epd  Perft.py  PerftSuite.json
Testing/Suite/: ChangeId.bat  ambbm.epd  ambbm.epd.json  arasan20.epd  (+118 more)
(+110 files in other folders)
